--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href='recipes/lemonychicken.html'>Lemony Chicken Recipe</a>
+        <ul>
+            <li><a href='recipes/lemonychicken.html'>Lemony Chicken Recipe</a></li>
+        </ul>
+        
     </body>
 </html>
