--- a/recipes/lemonychicken.html
+++ b/recipes/lemonychicken.html
@@ -1,1 +1,34 @@
-<h1>Lemony Chicken</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Lemony Chicken Recipe</title>
+</head>
+<body>
+    <h1>Lemony Chicken</h1>
+    <img src = 'https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1109090.jpg&w=596&h=399&c=sc&poi=face&q=85' alt='Lemony Chicken'>
+    <h2>Description</h2>
+    <p>Lemon chicken is the name of several dishes found in cuisines around the world which include chicken and lemon. In Canadian- and British-Chinese cuisine, it usually consists of pieces of chicken meat that are sautéed or battered and deep-fried and coated with a thick, sweet lemon-flavored sauce. The Chinese restaurant of the Panda Hotel in Tsuen Wan, Hong Kong used to serve its version of lemon chicken with the chicken pieces coated in batter, then rolled in almond slivers and deep-fried and served with the lemon-glaze sauce.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>¼ cup olive oil</li>
+
+        <li>½ cup all-purpose flour, or more if needed</li>
+
+        <li>4 skinless, boneless chicken breast halves</li>
+
+        <li> salt to taste</li>
+
+        <li> ¼ cup white wine</li>
+
+        <li> 2 large lemon, juiced</li>
+
+        <li> ¼ cup unsalted butter, softened</li>
+
+        <li> ¼ cup drained capers</li>
+
+        <li> 1 large lemon, cut into wedges</li>
+    </ul>
+</body>
+</html>
+
