--- a/recipes/lemonychicken.html
+++ b/recipes/lemonychicken.html
@@ -29,6 +29,11 @@
 
         <li> 1 large lemon, cut into wedges</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Heat the olive oil in a large skillet over medium-high heat. Place the flour in a shallow bowl. Season the chicken breasts with salt, then gently press into the flour to coat; shake off the excess flour. Arrange the chicken in the skillet. Cook until golden brown, 7 to 10 minutes on each side. Add the white wine and lemon juice. Continue cooking until the chicken breasts are no longer pink in the center and the cooking liquid is reduced by half, 5 to 7 minutes more. Transfer the chicken to a plate.</li><br>
+        <li>Remove the skillet from heat, and stir butter into the sauce until melted. Pour sauce over the chicken breasts, and garnish with capers and lemon wedges.</li>
+    </ol>
 </body>
 </html>
 
