Edit index.html,lasagna.html Add fluffyfrenchtoast.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href='recipes/lemonychicken.html'>Lemony Chicken Recipe</a></li>
             <li><a href='recipes/lasagna.html'>Chicken Taco Lasagna Recipe</a></li>
+            <li><a href='recipes/fluffyfrenchtoast.html'>Fluffy French Toast Recipe</a></li>
         </ul>
         
     </body>
