--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -29,10 +29,10 @@
         </ul>
         <h2>Steps</h2>
         <ol>
-            <li>Combine chicken, lime juice, and taco seasoning in a large bowl. Stir to make sure chicken is evenly covered.</li>
-            <li>Cook chicken mixture over medium heat until firm, about 15 minutes.</li>
-            <li>Mix 1/2 cup mozzarella cheese, sour cream, and salsa in a bowl. Season with salt and pepper.</li>
-            <li>Put a few spoonfuls of the sour cream mixture in the bottom of a 9x9-inch baking dish. Layer noodles and chicken on top. Cover with remaining 1 cup mozzarella cheese.</li>
+            <li>Combine chicken, lime juice, and taco seasoning in a large bowl. Stir to make sure chicken is evenly covered.</li><br>
+            <li>Cook chicken mixture over medium heat until firm, about 15 minutes.</li><br>
+            <li>Mix 1/2 cup mozzarella cheese, sour cream, and salsa in a bowl. Season with salt and pepper.</li><br>
+            <li>Put a few spoonfuls of the sour cream mixture in the bottom of a 9x9-inch baking dish. Layer noodles and chicken on top. Cover with remaining 1 cup mozzarella cheese.</li><br>
             <li>Bake in the preheated oven until noodles are tender and cheese is melted, about 1 hour.</li>
         </ol>
     </body>
