--- a/recipes/lemonychicken.html
+++ b/recipes/lemonychicken.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Lemony Chicken Recipe</title>
+    <link rel="stylesheet" href="../css/recipes.css">
 </head>
 <body>
     <h1>Lemony Chicken</h1>
