--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Chicken Taco Lasagna Recipe</title>
+        <link rel='stylesheet' href='../css/recipes.css'>
     </head>
     <body>
         <h1>Chicken Taco Lasagna</h1>
