--- a/recipes/fluffyfrenchtoast.html
+++ b/recipes/fluffyfrenchtoast.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf-8'>
         <title>Fluffy French Toast</title>
-        <link rel='stylesheet' href='../css/recipes.css'>
+        <link rel='stylesheet' href='../css/main.css'>
     </head>
     <body>
         <h1>Fluffy French Toast</h1>
