Edit css and all html files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
+        <ul id='links'>
             <li><a href='recipes/lemonychicken.html'>Lemony Chicken Recipe</a></li>
             <li><a href='recipes/lasagna.html'>Chicken Taco Lasagna Recipe</a></li>
             <li><a href='recipes/fluffyfrenchtoast.html'>Fluffy French Toast Recipe</a></li>
