--- a/recipes/fluffyfrenchtoast.html
+++ b/recipes/fluffyfrenchtoast.html
@@ -8,9 +8,9 @@
     <body>
         <h1>Fluffy French Toast</h1>
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8289248.jpg&q=85" alt="Fluffy French Toast" width="25%">
-        <h2>Description</h2>
+        <h2>Description:</h2>
         <p>French toast is a dish made of sliced bread soaked in beaten eggs and typically milk, then pan fried. Alternative names and variants include "eggy bread", "Bombay toast", "gypsy toast", and "poor knights" (of Windsor). When French toast is served as a sweet dish, milk, sugar, vanilla or cinnamon are also commonly added before pan-frying, and then it may be topped with sugar (often powdered sugar), butter, fruit, or syrup. When it is a savory dish, it is generally fried with a pinch of salt or pepper, and it can then be served with a sauce such as ketchup or mayonnaise.</p>
-        <h2>Ingredients</h2>
+        <h2>Ingredients:</h2>
         <ul>
             <li>¼ cup all-purpose flour</li>
 
@@ -28,7 +28,7 @@
 
             <li>12 thick slices bread</li>
         </ul>
-        <h2>Steps</h2>
+        <h2>Steps:</h2>
         <ol>
             <li>Measure flour into a large mixing bowl. Slowly whisk in the milk. Whisk in the salt, eggs, cinnamon, vanilla extract and sugar until smooth.</li><br>
             <li>Heat a lightly oiled griddle or frying pan over medium heat.</li><br>
