--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,9 +8,9 @@
     <body>
         <h1>Chicken Taco Lasagna</h1>
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4551605.jpg&w=596&h=399&c=sc&poi=face&q=85" alt="Chicken Taco Lasagna">
-        <h2>Description</h2>
+        <h2>Description:</h2>
         <p>Lasagne (US: /ləˈzɑːnjə/, UK: /ləˈzænjə/, Italian: [laˈzaɲɲe]; singular lasagna, Italian: [laˈzaɲɲa]) are a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagne alternating with fillings such as ragù (ground meats and tomato sauce), vegetables, cheeses (which may include ricotta, mozzarella, and parmesan), and seasonings and spices, like Italian seasoning, such as garlic, oregano and basil. The dish may be topped with grated cheese, which becomes melted after baking. Typically, cooked pasta is assembled with the other ingredients and then baked in an oven. The resulting casserole is cut into single-serving square portions.</p>
-        <h2>Ingredients</h2>
+        <h2>Ingredients:</h2>
         <ul>
             <li>4 boneless skinless chicken breasts, cut into 1/4-inch strips</li>
 
@@ -28,7 +28,7 @@
 
             <li>1 (8 ounce) package no-boil lasagna noodles, or to taste</li>
         </ul>
-        <h2>Steps</h2>
+        <h2>Steps:</h2>
         <ol>
             <li>Combine chicken, lime juice, and taco seasoning in a large bowl. Stir to make sure chicken is evenly covered.</li><br>
             <li>Cook chicken mixture over medium heat until firm, about 15 minutes.</li><br>
