--- a/recipes/lemonychicken.html
+++ b/recipes/lemonychicken.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Lemony Chicken</h1>
     <img src = 'https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1109090.jpg&w=596&h=399&c=sc&poi=face&q=85' alt='Lemony Chicken'>
-    <h2>Description</h2>
+    <h2>Description:</h2>
     <p>Lemon chicken is the name of several dishes found in cuisines around the world which include chicken and lemon. In Canadian- and British-Chinese cuisine, it usually consists of pieces of chicken meat that are sautéed or battered and deep-fried and coated with a thick, sweet lemon-flavored sauce. The Chinese restaurant of the Panda Hotel in Tsuen Wan, Hong Kong used to serve its version of lemon chicken with the chicken pieces coated in batter, then rolled in almond slivers and deep-fried and served with the lemon-glaze sauce.</p>
-    <h2>Ingredients</h2>
+    <h2>Ingredients:</h2>
     <ul>
         <li>¼ cup olive oil</li>
 
@@ -30,7 +30,7 @@
 
         <li> 1 large lemon, cut into wedges</li>
     </ul>
-    <h2>Steps</h2>
+    <h2>Steps:</h2>
     <ol>
         <li>Heat the olive oil in a large skillet over medium-high heat. Place the flour in a shallow bowl. Season the chicken breasts with salt, then gently press into the flour to coat; shake off the excess flour. Arrange the chicken in the skillet. Cook until golden brown, 7 to 10 minutes on each side. Add the white wine and lemon juice. Continue cooking until the chicken breasts are no longer pink in the center and the cooking liquid is reduced by half, 5 to 7 minutes more. Transfer the chicken to a plate.</li><br>
         <li>Remove the skillet from heat, and stir butter into the sauce until melted. Pour sauce over the chicken breasts, and garnish with capers and lemon wedges.</li>
